--- a/examples/basic/small_mbgp_test/micro_mbgp_with_bgp/old_micro_0_mbgp_results/old_route_150_static_routes.conf
+++ b/examples/basic/small_mbgp_test/micro_mbgp_with_bgp/old_micro_0_mbgp_results/old_route_150_static_routes.conf
@@ -1,5 +1,6 @@
+ipv4 table t_rw;
 protocol static static_routes {
-    ipv4 { import all; };
+    ipv4 { table t_rw; import all; };    
     route 156.79.0.0/24 via 10.100.0.150;
     route 122.4.52.0/24 via 10.100.0.150;
     route 27.135.104.0/24 via 10.100.0.150;
@@ -500,4 +501,10 @@ protocol static static_routes {
     route 112.30.33.0/24 via 10.100.0.150;
     route 165.191.146.0/24 via 10.100.0.150;
     route 113.49.237.0/24 via 10.100.0.150;
+}
+protocol pipe {
+    table t_rw;
+    peer table t_bgp;
+    import none;
+    export all;
 }
